--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
     display: flex;
     justify-content: center;
     background: var(--color-primary);
+    border-bottom: 1px solid #0077a8;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* subtle shadow */
     position: sticky;
     top: 0;
     z-index: 100;
+    flex-wrap: wrap;
   }
 
   nav a {
@@ -62,7 +65,7 @@
     content: "";
     position: absolute;
     left: 0;
-    bottom: 2px;
+    bottom: 0;
     width: 100%;
     height: var(--underline-height);
     background: var(--color-white);
@@ -88,7 +91,8 @@
     background: var(--color-white);
     padding: 1.5rem;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    border: 1px solid #e0e0e0; /* thin border */
+    box-shadow: 0 0 10px rgba(0,0,0,0.03);
     margin-bottom: 0.5rem;
   }
 
@@ -106,9 +110,10 @@
 
   .gallery-item {
     background: var(--color-white);
+    border: 1px solid #e0e0e0;
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    box-shadow: 0 0 5px rgba(0,0,0,0.05);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -248,7 +253,7 @@
   const sections = document.querySelectorAll("main section");
   const scrollTopBtn = document.getElementById("scrollTopBtn");
 
-  // Intersection Observer for active link highlighting
+  // Intersection Observer for active nav link
   const observer = new IntersectionObserver(
     entries => {
       entries.forEach(entry => {
