--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
 
   /* Blue header bar on main cards with no border behind */
   .card > h2 {
-    padding: 0.75rem 1rem;
+    padding: 0.65rem 1.5rem; /* match nav bar padding */
     font-size: 1.7rem;
     margin-bottom: 1.25rem;
     background: var(--color-primary-end);
-    color: var(--color-white);
+    color: #10294b; /* darker navy for better contrast */
     border-radius: 10px 10px 0 0;
     margin-top: -1.75rem; /* pull header outside card padding */
     margin-left: -1.75rem; /* cover card border left */
